--- a/signIn.html
+++ b/signIn.html
@@ -29,7 +29,7 @@
         }
 
         div.full_page {
-            width: 360px;
+            max-width: 360px;
             margin: auto;
             border: 1px solid lightgrey;
             margin-top: 50px;
